more css adjustments, fixed alert box text wrap.

--- a/public/style.css
+++ b/public/style.css
@@ -111,7 +111,7 @@ hr {
   margin-right: auto;
   width: 98%;
   height: 30%;
-  background-color: #ced4da2a;
+  background-image: linear-gradient(to right, rgba(206, 212, 218, 0.2), rgba(230, 230, 230, 0.349));
   border-radius: 5px;
 }
 .topbar-channel-logo {
@@ -157,6 +157,7 @@ hr {
   text-align: center;
   align-items: center;
   overflow: hidden;
+  white-space: nowrap;
 }
 .topbar-presentationinfo-thingies {
   display: flex;
@@ -550,6 +551,7 @@ hr {
 	left: 0%;
 	text-shadow: rgb(0, 0, 0) 1pt 1pt 1pt;
 	bottom: -64%;
+  animation: slidein 2s ease-in-out 1;
 }
 .main-alerts-standby-scrolltextdecorative {
   animation: scroll 20s linear infinite;
@@ -561,6 +563,15 @@ hr {
   }
   100% {
     transform: translateX(100%);
+  }
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateY(200px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 
@@ -635,12 +646,13 @@ hr {
 }
 
 .ldl-marquee {
-	width: 65%;
+	width: 55%;
 	height: 100%;
-	background-color: rgba(206, 212, 218, 0.2);
+  background-image: linear-gradient(to right, rgba(206, 212, 218, 0.2), rgba(201, 201, 201, 0.349));
 	border-radius: 4pt;
-	font-weight: 700;
+	font-weight: 500;
 	overflow: hidden;
+  font-size: 10pt;
 }
 
 .ldl-locationlabel-container {
@@ -651,10 +663,11 @@ hr {
 #ldl-location-label {
   overflow: visible;
   white-space: nowrap;
+  font-size: 10pt;
 }
 
 #ldl-location {
-  height: 20%;
+  height: 25.5%;
 }
 
 .ldltext-primary {
@@ -722,7 +735,7 @@ hr {
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  width: 40%;
+  width: 65%;
 }
 
 #ldl-current-condition {
